# cleo-daily

./: .env.example  .gitignore  .mcp.json.example  ARCHITECTURE.md  CONFIG.md  LICENSE  README.md  cleo.toml  pyproject.toml
cleo/: __init__.py  cli.py  config.py  edit.py  ingest.py  mcpclient.py  render.py  schema.py
cleo/publish/: __init__.py  email.py  file.py  git.py  web.py
cleo/skill/: cleo-editor.md
cleo/sources/: __init__.py  rss.py
editions/: cleo-daily-no-01.html
routine/: README.md
servers/: README.md
servers/calendar/: server.py
servers/gmail/: server.py
servers/rss/: server.py
servers/weather/: server.py
servers/x/: server.py
tests/: test_engine.py
themes/broadsheet-mono/: base.css  issue.html.j2  manifest.toml  sections.html.j2
