[project]
name = "cleo-daily"
version = "0.2.0"
description = "An open-source engine for LLM-authored print magazines. Boring work is code; taste is the model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ankit Aggarwal" }]
keywords = ["llm", "mcp", "print", "magazine", "claude", "rss", "agent"]

# Lean by design. The engine is deterministic plumbing; the taste lives in the
# routine (Claude) and is reached over MCP — not pulled in as a dependency.
dependencies = [
  "pydantic>=2.6",       # the Item / Issue contracts, validated
  "jinja2>=3.1",         # theme = HTML/CSS templates
  "feedparser>=6.0",     # the built-in rss source adapter
  "httpx>=0.27",         # fetching feeds + article bodies
  "tomli>=2.0; python_version < '3.11'",  # cleo.toml on 3.10
]

[project.optional-dependencies]
# Only needed to run the Editor *locally* (outside a Claude routine).
edit = ["anthropic>=0.40"]
# Only needed to run / write the supporting MCP servers.
mcp = ["mcp>=1.2"]
# Everything, for development.
dev = ["anthropic>=0.40", "mcp>=1.2", "pytest>=8.0"]

[project.scripts]
cleo = "cleo.cli:main"

[project.urls]
Homepage = "https://github.com/ankitaggarwal/cleo-daily"
Source = "https://github.com/ankitaggarwal/cleo-daily"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cleo"]
